--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
 	<div></div>
 </div>
 
+<div class="button-container">
+	<button id="solve-button"> solve </button>
+</div>
+
 <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
