added multiple boards

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 </div>
 
 <div class="button-container">
+	<button id="create-board"> create </button>
 	<button id="solve-button"> solve </button>
 </div>
 
