--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 <div class="button-container">
 	<button id="create-board"> create </button>
 	<button id="solve-button"> solve </button>
+	<button id="visual"> visualize </button>
 </div>
 
 <script type="text/javascript" src="app.js"></script>
