--- a/index.html
+++ b/index.html
@@ -268,6 +268,16 @@
 
             <button class="solve">solve</button>
             <button class="visual">visualize</button>
+
+            <div class="radio">
+                <input type="radio" name="difficulty" id="easy" value="easy">
+                <label for="easy">easy</label><br>
+                <input type="radio" name="difficulty" id="medium" value="medium">
+                <label for="medium">medium</label><br>
+                <input type="radio" name="difficulty" id="hard" value="hard">
+                <label for="hard">hard</label>
+            </div>
+
         </div>
 
 
