--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
                 </div>
             </div>
 
+            <button class="create">create</button>
             <button class="solve">solve</button>
             <button class="visual">visualize</button>
 
