--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <script src="jquery-3.6.0.js"></script>
     </head>
     <body>
         <div class="container">
