--- a/index.html
+++ b/index.html
@@ -280,6 +280,8 @@
                 <label for="hard">hard</label>
             </div>
 
+           <!-- <h3 id="status">status</h3> -->
+
         </div>
 
 
