--- a/index.html
+++ b/index.html
@@ -278,20 +278,24 @@
                         <button class="solve">solve</button>
                         <button class="visual">visualize</button>
                     </div>
-
-                    <div class="radio">
-                        <input type="radio" name="difficulty" id="easy" value="easy">
-                        <label for="easy">easy</label><br>
-                        <input type="radio" name="difficulty" id="medium" value="medium">
-                        <label for="medium">medium</label><br>
-                        <input type="radio" name="difficulty" id="hard" value="hard">
-                        <label for="hard">hard.</label>
-                    </div>
                 </div>
             </div>
+        </div> 
 
-           <!-- <h3 id="status">status</h3> -->
-
+        <div class="pop-up" id="popup">
+            <div class="overlay"></div>
+            <div class="pop-up-content">
+                <div class="close-btn" onclick="togglePopUp()">&times;</div>
+                <div class="pop-up-title">Choose Difficulty.</div>
+                <div class="radio">
+                    <input type="radio" name="difficulty" id="easy" value="easy">
+                    <label for="easy">easy</label><br>
+                    <input type="radio" name="difficulty" id="medium" value="medium">
+                    <label for="medium">medium</label><br>
+                    <input type="radio" name="difficulty" id="hard" value="hard">
+                    <label for="hard">hard.</label>
+                </div>
+            </div>
         </div>
 
 
