--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     <input type="radio" name="difficulty" id="medium" value="medium">
                     <label for="medium">medium</label><br>
                     <input type="radio" name="difficulty" id="hard" value="hard">
-                    <label for="hard">hard.</label>
+                    <label for="hard">hard</label>
                 </div>
             </div>
         </div>
