--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     </head>
     <body>
         <div class="container">
+            <!-- <div class="header-wrapper">
+                <div class="header"><h1>Sudoku</h1></div>
+            </div> -->
             <div class="parent-board">
                 <div class="grid-container">
         
@@ -286,7 +289,7 @@
             <div class="overlay"></div>
             <div class="pop-up-content">
                 <div class="close-btn" onclick="togglePopUp()">&times;</div>
-                <div class="pop-up-title">Choose Difficulty.</div>
+                <div class="pop-up-title">Choose Difficulty</div>
                 <div class="radio">
                     <input type="radio" name="difficulty" id="easy" value="easy">
                     <label for="easy">easy</label><br>
