--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <div class="pop-up" id="popup">
             <div class="overlay"></div>
             <div class="pop-up-content">
-                <div class="close-btn" onclick="togglePopUp()">&times;</div>
+                <div class="close-btn">&times;</div>
                 <div class="pop-up-title">Choose Difficulty</div>
                 <div class="radio">
                     <input type="radio" name="difficulty" id="easy" value="easy">
