--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
-        <script src="jquery-3.6.0.js"></script>
+        <script src="/js/jquery-3.6.0.js"></script>
     </head>
     <body>
         <div class="container">
@@ -304,6 +304,6 @@
 
         
         
-        <script src="app.js"></script>
+        <script src="/js/app.js"></script>
     </body>
 </html>
