todo: check function

--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
                 </div>
                  <div class="buttons">
                         <button class="create">create</button>
+                        <button class="check">check</button>
                         <button class="solve">solve</button>
                         <button class="visual">visualize</button>
+                        <button class="clear">clear</button>
                 </div>
             </div>
         </div> 
