added info button

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
                         <button class="solve">solve</button>
                         <button class="visual">visualize</button>
                         <button class="clear">clear</button>
+                        <button class="info-tip">info</button>
+                        <span class='info-text'>Input numbers in the board and click create to create your own board</span>
                 </div>
             </div>
         </div> 
